--- a/docs/vintage-test.adoc
+++ b/docs/vintage-test.adoc
@@ -1,7 +1,7 @@
 :page-title: Vintage @Test
 :page-description: A drop-in replacement for JUnit 4's @Test annotation, including expected and timeout
 
-The annotation `org.junit$pioneer.vintage.@Test` acts as a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
+The annotation `org.junitpioneer.vintage.@Test` acts as a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
 That means you do not need to run JUnit 5's Vintage engine to execute this test--Jupiter suffices.
 
 Since the test is run by Jupiter, *JUnit 4 runners and rules will have no effect* and you will still have to replace them with JUnit 5 extensions.
