--- a/docs/vintage-test.adoc
+++ b/docs/vintage-test.adoc
@@ -2,7 +2,12 @@
 :page-description: A drop-in replacement for JUnit 4's @Test annotation, including expected and timeout
 
 The annotation `org.junitpioneer.vintage.@Test` acts as a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
-That means you do not need to run JUnit 5's Vintage engine to execute this test--Jupiter suffices.
+
+You can make use of it when migrating tests from JUnit 4 to Jupiter by doing a fulltext search/replace of `import org.junit.Test` with `import org.junitpioneer.vintage.Test`.
+That means you do not need to run JUnit 5's Vintage engine to execute such tests--Jupiter suffices.
+
+This should be seen as an intermediate step towards a full migration and should be followed up by gradual/manual replacement of of `org.junitpioneer.vintage.Test` with Jupiter's `org.junit.jupiter.api.Test`.
+To emphasize its character as a temporary solution and to reduce https://github.com/junit-pioneer/junit-pioneer/issues/137[risk of accidental use], it's marked as deprecated.
 
 Since the test is run by Jupiter, *JUnit 4 runners and rules will have no effect* and you will still have to replace them with JUnit 5 extensions.
 
