--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -14,7 +14,7 @@ The default `Locale` can be specified using an https://docs.oracle.com/javase/8/
 @Test
 @DefaultLocale("zh-Hant-TW")
 void test_with_lanuage() {
-	assertEquals(Locale.forLanguageTag("zh-Hant-TW"), Locale.getDefault());
+	assertThat(Locale.getDefault()).isEqualsTo(Locale.forLanguageTag("zh-Hant-TW"));
 }
 ----
 
@@ -29,19 +29,19 @@ Alternatively the default `Locale` can be specified according to https://docs.or
 @Test
 @DefaultLocale(language = "en")
 void test_with_lanuage() {
-	assertEquals(new Locale("en"), Locale.getDefault());
+	assertThat(Locale.getDefault()).isEqualsTo(new Locale("en"));
 }
 
 @Test
 @DefaultLocale(language = "en", country = "EN")
 void test_with_lanuage_and_country() {
-	assertEquals(new Locale("en", "EN"), Locale.getDefault());
+	assertThat(Locale.getDefault()).isEqualsTo(new Locale("en", "EN"));
 }
 
 @Test
 @DefaultLocale(language = "en", country = "EN", variant = "gb")
 void test_with_lanuage_and_country_and_vairant() {
-	assertEquals(new Locale("en", "EN", "gb"), Locale.getDefault());
+	assertThat(Locale.getDefault()).isEqualsTo(new Locale("en", "EN", "gb"));
 }
 ----
 
@@ -58,13 +58,13 @@ class MyLocaleTests {
 
 	@Test
 	void test_with_class_level_configuration() {
-		assertEquals(new Locale("fr"), Locale.getDefault());
+		assertThat(Locale.getDefault()).isEqualsTo(new Locale("fr"));
 	}
 
 	@Test
 	@DefaultLocale(language = "en")
 	void test_with_method_level_configuration() {
-		assertEquals(new Locale("en"), Locale.getDefault());
+		assertThat(Locale.getDefault()).isEqualsTo(new Locale("en"));
 	}
 }
 ----
@@ -78,13 +78,13 @@ The default `TimeZone` is specified according to the https://docs.oracle.com/jav
 @Test
 @DefaulTimeZone("CET")
 void test_with_short_zone_id() {
-	assertEquals(TimeZone.getTimeZone("CET"), TimeZone.getDefault());
+	assertThat(TimeZone.getDefault()).isEqualsTo(TimeZone.getTimeZone("CET"));
 }
 
 @Test
 @DefaultTimeZone("America/Los_Angeles")
 void test_with_long_zone_id() {
-	assertEquals(TimeZone.getTimeZone("America/Los_Angeles"), TimeZone.getDefault());
+	assertThat(TimeZone.getDefault()).isEqualsTo(TimeZone.getTimeZone("America/Los_Angeles"));
 }
 ----
 
@@ -97,13 +97,13 @@ class MyTimeZoneTests {
 
 	@Test
 	void test_with_class_level_configuration() {
-		assertEquals(TimeZone.getTimeZone("CET"), TimeZone.getDefault());
+		assertThat(TimeZone.getDefault()).isEqualsTo(TimeZone.getTimeZone("CET"));
 	}
 
 	@Test
 	@DefaultTimeZone("America/Los_Angeles")
 	void test_with_method_level_configuration() {
-		assertEquals(TimeZone.getTimeZone("America/Los_Angeles"), TimeZone.getDefault());
+        assertThat(TimeZone.getDefault()).isEqualsTo(TimeZone.getTimeZone("America/Los_Angeles"));
 	}
 }
 ----
