--- a/docs/range-sources.adoc
+++ b/docs/range-sources.adoc
@@ -27,7 +27,7 @@ It can be positive or negative:
 ----
 @ParameterizedTest
 @DoubleRangeSource(from = -0.1, to = -10, step = -0.1)
-void howCouldIsIt(double d) {
+void howColdIsIt(double d) {
 	System.out.println(d + " degrees Celsius is cold");
 	System.out.println(d + " degrees Fahrenheit is REALY cold");
 	System.out.println(d + " degrees Kelvin is too cold to be true");
@@ -52,7 +52,7 @@ void illegalRange(byte arg) {
 @LongRangeSource(from = 0L, to = 0L, closed = true)
 void legalRrange(long arg) {
 	// But this is fine
-	assertEquals(0L, arg);
+	assertThat(arg).isEqualsTo(0L);
 }
 ----
 
