Fix Javadoc of EnvironmentVariableExtension
Corrects several documentation errors of the
`EnvironmentVariableExtension`. The documentation of the
`SystemPropertyExtension` and the `EnvironmentVariableExtension` were
accidentally mixed up.

Fixes: #237
PR: #240

[ci skip-release]

--- a/docs/enviroment-variables.adoc
+++ b/docs/enviroment-variables.adoc
@@ -53,7 +53,7 @@ Note that class level configurations are overwritten by method level configurati
 [source,java]
 ----
 @ClearEnvironmentVariable(key = "some variable")
-class MySystemPropertyTest {
+class MyEnvironmentVariableTest {
 	@Test
 	@SetEnvironmentVariable(key = "some variable", value = "new value")
 	void test() {
