--- a/docs/vintage-test.adoc
+++ b/docs/vintage-test.adoc
@@ -1,7 +1,7 @@
 :page-title: Vintage @Test
 :page-description: A drop-in replacement for JUnit 4's @Test annotation, including expected and timeout
 
-The annotation `org.junitpioneer.vintage.@Test` acts as a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
+The annotation `org.junitpioneer.vintage.@Test` is a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
 
 You can make use of it when migrating tests from JUnit 4 to Jupiter by doing a fulltext search/replace of `import org.junit.Test` with `import org.junitpioneer.vintage.Test`.
 That means you do not need to run JUnit 5's Vintage engine to execute such tests--Jupiter suffices.
@@ -14,7 +14,7 @@ Since the test is run by Jupiter, *JUnit 4 runners and rules will have no effect
 Like JUnit 4's version, `@Test` has two optional parameters:
 
 * `expected` to fail a test unless an exception of the specified type is thrown
-* `timeout` to fail a test that runs too long (*careful*: at the moment, long running tests are not aborted--they just fail once they're finished)
+* `timeout` to fail and abandon a test that runs too long
 
 == Expecting exceptions
 
@@ -64,8 +64,8 @@ public void slow_fail() {
 }
 ----
 
-Note that unlike in JUnit 4, `timeout` does not abort long-running tests!
-The following tests does not fail--it runs indefinitely:
+Like in JUnit 4, `timeout` aborts long-running tests.
+The following tests does not run indefinitely--it failes after 100 milliseconds:
 
 [source,java]
 ----
