--- a/docs/retrying-test.adoc
+++ b/docs/retrying-test.adoc
@@ -60,3 +60,8 @@ This is most likely unwanted and thus the engine warns:
 > Possible configuration error:
 > method [...] resulted in multiple TestDescriptors [...].
 > This is typically the result of annotating a method with multiple competing annotations such as @Test, @RepeatedTest, @ParameterizedTest, @TestFactory, etc.
+
+== Thread-Safety
+
+This extension is thread-safe.
+During https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution], all repetitions of a `@RepeatFailedTest` are executed sequentially.
