--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -107,3 +107,19 @@ class MyTimeZoneTests {
 	}
 }
 ----
+
+== Thread-Safety
+
+Since default locale and time zone are global state, reading and writing them during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution] can lead to unpredictable results and flaky tests.
+The `@DefaultLocale` and `@DefaultTimeZone` extensions are prepared for that and tests annotated with them will never execute in parallel (thanks to https://junit.org/junit5/docs/current/api/org.junit.jupiter.api/org/junit/jupiter/api/parallel/ResourceLock.html[resource locks]) to guarantee correct test results.
+
+However, this does not cover all possible cases.
+Tested code that reads or writes default locale and time zone _independently_ of the extensions can still run in parallel to them and may thus behave erratically when, for example, it unexpectedly reads a locale set by the extension in another thread.
+Tests that cover code that reads or writes the default locale or time zone need to be annotated with the respective annotation:
+
+* `@ReadsDefaultLocale`
+* `@ReadsDefaultTimeZone`
+* `@WritesDefaultLocale`
+* `@WritesDefaultTimeZone`
+
+Tests annotated in this way will never execute in parallel with tests annotated with `@DefaultLocale` or `@DefaultTimeZone`.
