--- a/docs/standard-input-output.adoc
+++ b/docs/standard-input-output.adoc
@@ -108,6 +108,21 @@ public class StandardInputOutputTests {
 The remaining combinations of the annotation, its values, and `StdIn`/`StdOut` are considered misconfigurations and lead to exceptions.
 
 
+== Thread-Safety
+
+Since `System.in` and `System.out` are global state, reading and writing them during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution] can lead to unpredictable results and flaky tests.
+The `@StdIo` extension is prepared for that and tests annotated with it will never execute in parallel (thanks to https://junit.org/junit5/docs/current/api/org.junit.jupiter.api/org/junit/jupiter/api/parallel/ResourceLock.html[resource locks]) to guarantee correct test results.
+
+However, this does not cover all possible cases.
+Tested code that reads `System.in` or `System.out` or calls `System.setIn()` or `System.setOut()` _independently_ of the extensions can still run in parallel to them and may thus behave erratically when, for example, it unexpectedly uses `System.out` that was set by the extension in another thread.
+Tests that cover code that reads or writes `System.in` or `System.out` need to be annotated with the respective annotation:
+
+* `@ReadsStdIo`
+* `@WritesStdIo`
+
+Tests annotated in this way will never execute in parallel with tests annotated with `@StdIo`.
+
+
 == Edge cases and unexpected behavior
 
 === Empty input (with or without `StdIn`)
