--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -56,3 +56,17 @@ class MySystemPropertyTest {
 	}
 }
 ----
+
+== Thread-Safety
+
+Since system properties are global state, reading and writing them during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution] can lead to unpredictable results and flaky tests.
+The system property extension is prepared for that and tests annotated with `@ClearSystemProperty` or `@SetSystemProperty` will never execute in parallel (thanks to https://junit.org/junit5/docs/current/api/org.junit.jupiter.api/org/junit/jupiter/api/parallel/ResourceLock.html[resource locks]) to guarantee correct test results.
+
+However, this does not cover all possible cases.
+Tested code that reads or writes system properties _independently_ of the extension can still run in parallel to it and may thus behave erratically when, for example, it unexpectedly reads a property set by the extension in another thread.
+Tests that cover code that reads or writes system properties need to be annotated with the respective annotation:
+
+* `@ReadsSystemProperty`
+* `@WritesSystemProperty`
+
+Tests annotated in this way will never execute in parallel with tests annotated with `@ClearSystemProperty` or `@SetSystemProperty`.
