--- a/docs/vintage-test.adoc
+++ b/docs/vintage-test.adoc
@@ -74,3 +74,7 @@ public void indefinitely() {
 	while(true);
 }
 ----
+
+== Thread-Safety
+
+This extension is safe to use during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution].
