Align documentation headers, page descriptions and ToC entries (#311 / #312)
This PR aligns the formatting and wording of headers, entries
in the ToC (navigation) and page descriptions.
Entry don't use the annotation names (including the @-symbol) anymore.
Instead a natural language is used. 

These changes should also increases rating of search engines.

--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -1,5 +1,5 @@
-:page-title: @DefaultLocale and @DefaultTimeZone
-:page-description: JUnit Jupiter extensions to change the values returned from Locale.getDefault() and TimeZone.getDefault()
+:page-title: Default Locale and TimeZone
+:page-description: Extends JUnit Jupiter with `@DefaultLocale`, `@DefaultTimeZone`, which change the values returned from Locale.getDefault() and TimeZone.getDefault()
 
 The `@DefaultLocale` and `@DefaultTimeZone` annotations can be used to change the values returned from `Locale.getDefault()` and `TimeZone.getDefault()`.
 Both annotations work on the test class level and on the test method level.
