--- a/docs/environment-variables.adoc
+++ b/docs/environment-variables.adoc
@@ -1,5 +1,5 @@
-:page-title: @ClearEnvironmentVariable and @SetEnvironmentVariable
-:page-description: JUnit Jupiter extensions to clear and set the values of environment variable
+:page-title: Clearing or Setting Environment Variables
+:page-description: Extends JUnit Jupiter with `@ClearEnvironmentVariable`, `@SetEnvironmentVariable`, which clear and set the values of environment variables
 
 The `@ClearEnvironmentVariable` and `@SetEnvironmentVariable` annotations can be used to clear, respectively, set the values of environment variables for a test execution.
 Both annotations work on the test method and class level, are repeatable as well as combinable.
