--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -1,5 +1,5 @@
-:page-title: @ClearSystemProperty and @SetSystemProperty
-:page-description: JUnit Jupiter extensions to clear and set the values of system properties
+:page-title: Clearing or Setting System Properties
+:page-description: Extends JUnit Jupiter with `@ClearSystemProperty`, `@SetSystemProperty`, which clear and set the values of system properties
 
 The `@ClearSystemProperty` and `@SetSystemProperty` annotations can be used to clear, respectively, set the values of system properties for a test execution.
 Both annotations work on the test method and class level, are repeatable as well as combinable.
