--- a/docs/vintage-test.adoc
+++ b/docs/vintage-test.adoc
@@ -1,5 +1,5 @@
 :page-title: Vintage @Test
-:page-description: A drop-in replacement for JUnit 4's @Test annotation, including expected and timeout
+:page-description: Extends JUnit Jupiter with a drop-in replacement for JUnit 4's @Test annotation, including expected and timeout
 
 The annotation `org.junitpioneer.vintage.@Test` is a drop-in replacement for https://junit.org/junit4/javadoc/4.12/org/junit/Test.html[JUnit 4`s `org.junit.@Test` annotation], but marks the method as a regular JUnit Jupiter test.
 
