--- a/docs/project-page.adoc
+++ b/docs/project-page.adoc
@@ -1,9 +1,9 @@
 ---
-excerpt: '<p>JUnit 5 extension pack, pushing the frontiers on Jupiter.</p> <small>Released on <a href="https://github.com/junit-pioneer/junit-pioneer/releases">GitHub</a>, <a href="https://jcenter.bintray.com/org/junit-pioneer/junit-pioneer/">JCenter</a>, and <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.junit-pioneer%22%20a%3A%22junit-pioneer%22">Maven Central</a> under<br /><code class="coordinates">org.junit-pioneer : junit-pioneer</code></small><br/><br/> {::nomarkdown}<iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="145px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=star&count=true&size=large" frameborder="0" scrolling="0" width="138px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="138px" height="30px"></iframe>{:/nomarkdown}'
+excerpt: 'JUnit 5 extension pack, pushing the frontiers on Jupiter.<br/> <small>Released on [GitHub](https://github.com/junit-pioneer/junit-pioneer/releases), [JCenter](https://jcenter.bintray.com/org/junit-pioneer/junit-pioneer/), and [Maven Central](https://mvnrepository.com/artifact/org.junit-pioneer/junit-pioneer) under<br /><span class="coordinates">`org.junit-pioneer : junit-pioneer : @xp:version`</span></small><br/><br/> {::nomarkdown}<iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="145px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=star&count=true&size=large" frameborder="0" scrolling="0" width="138px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=junit-pioneer&repo=junit-pioneer&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="138px" height="30px"></iframe>{:/nomarkdown}'
 ---
 :page-layout: single
 :page-permalink: /junit-pioneer/
-:page-header: { overlay_image: {site-images}/pioneer-full.jpg }
+:page-header: { overlay_image: {site-images}/pioneer-full.jpg, title_alignment: left }
 :page-title: JUnit Pioneer
 
 JUnit Pioneer is an https://blog.codefx.org/design/architecture/junit-5-extension-model/[extension pack] for https://junit.org/junit5/[JUnit 5] or, https://blog.codefx.org/design/architecture/junit-5-architecture/[to be more precise], for the Jupiter engine.
