Turn artifact into a modular JAR (#314 / #326)
This change adds a module descriptor (`module-info.class`) to the
extension pack artifact to support modular projects. Because we want
to continue building our project against Java 8, `module-info.java`
is not placed into `src/main/java` and compiled with the rest of the
sources.

Instead, it is placed into its own directory `src/main/module`.
Because Gradle does not support building on Java 8 and adding a
predefined module descriptor (Gradle only supports full modular
builds with the module declaration in `src/main/java`, which would
require to build with Java 9+), we use
[moditect](https://github.com/moditect/moditect).

The module name was picked as decided in #251 and (formerly) enshrined
as automatic module name in `MANIFEST.MF` - that was removed now.

This change also removes JUnit internal classes from some extensions
(e.g. the class `Preconditions`) or replaces internal classes with
their public counterpart (e.g. `AnnotationUtils`). This ensures that
a modular project can use the extension pack without illegal access
errors at run time.

closes #314
relates to #251
PR: #326

--- a/docs/range-sources.adoc
+++ b/docs/range-sources.adoc
@@ -44,7 +44,7 @@ This behavior can be controlled by specifying the `closed` argument:
 @ParameterizedTest
 @ByteRangeSource(from = 0, to = 0)
 void illegalRange(byte arg) {
-	// this will fail with a PreconditionViolationException
+	// this will fail with an IllegalArgumentException
 	// since the range will be empty
 }
 
@@ -58,7 +58,7 @@ void legalRrange(long arg) {
 
 == Empty ranges
 
-The range sources check whether the range defined by `from`, `to`, and `step` is empty and throws a `PreconditionViolationException` if it is.
+The range sources check whether the range defined by `from`, `to`, and `step` is empty and throws an `IllegalArgumentException` if it is.
 
 == Thread-Safety
 
