Publish test parameters with @ReportEntry (#179 / #294)
`@ReportEntry` now allows users to reference parameterized test
arguments in its message with, e.g., `"{0}"`.

Progresses #179
PR: #294

--- a/docs/report-entries.adoc
+++ b/docs/report-entries.adoc
@@ -112,6 +112,28 @@ The extension will publish your report entry if the test was aborted (for exampl
 
 Entries will always be published after the test finished.
 
+=== Publishing test parameters
+
+You can access `@ParameterizedTest` parameter values and publish them with the `@ReportEntry` annotation.
+Add a number (starting from zero) between curly braces to reference the argument with that index.
+This works just like arguments in https://docs.oracle.com/javase/8/docs/api/java/text/MessageFormat.html[Java's `MessageFormat`] and is in line with how you reference test parameters https://junit.org/junit5/docs/current/user-guide/#writing-tests-parameterized-tests-display-names[when customizing the Display Name of a `ParameterizedTest`].
+Inside the report entry, the parameters can be referenced in any order and multiple times.
+For example, if you have a `@ParameterizedTest` like the following:
+
+[source, java]
+----
+@ParameterizedTest
+@CsvSource({"Hello, 21", "World, 42"})
+@ReportEntry("{1} - {0} - {1}")
+void test(String line, int number) {
+    // YOUR TEST CODE HERE
+}
+----
+Then the extension will publish `"21 - Hello - 21"` and `"42 - World - 42"`.
+
+Accessing test parameters in the key of the report entry is unsupported.
+
+
 == Thread-Safety
 
 This extension is safe to use during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution].
