Remove @TempDir extension (#277 / #327)
A very similar extension (with the same name) exists in Jupiter. It
doesn't support custom file systems, but other than that is more
feature-rich than this variant. This creates an unpleasant situation
where there are two extensions that solve the same problem with the
same approach, but slightly different feature sets.

After evaluating the situation, we decided to remove our extension
before the 1.0 release with the goal to look for a better solution
to the problem in the future.

Closes: #277
Related: #348
PR: #327

--- a/docs/temp-directory.adoc
+++ b/docs/temp-directory.adoc
@@ -1,7 +1,9 @@
-:page-title: Temporary Files and Directories
+:page-title: Temporary Files and Directories (removed in 1.0)
 :page-description: Extends JUnit Jupiter with `@TempDir`, which create and clean up a temporary directory.
 
-NOTE: Since JUnit Jupiter 5.4, there's a https://junit.org/junit5/docs/current/user-guide/#writing-tests-built-in-extensions-TempDirectory[built-in `@TempDir` extension]. If you don't need support for arbitrary file systems, you should consider using that instead of this extension.
+NOTE: Since JUnit Jupiter 5.4, there's a https://junit.org/junit5/docs/current/user-guide/#writing-tests-built-in-extensions-TempDirectory[built-in `@TempDir` extension].
+It doesn't support custom file systems, but other than that it's much better than this version, so *we removed the extension in JUnit Pioneer 1.0*.
+We plan to tackle this problem again in the future - see https://github.com/junit-pioneer/junit-pioneer/issues/348[issue #348].
 
 The `TempDirectory` extension can be used to create and clean up a temporary directory for an individual test or all tests in a test class.
 To use it, simply register the extension and add a parameter of type `java.nio.file.Path` to your test or lifecycle method or constructor.
